Cleanup bindings and general code
Signed-off-by: Jean Patrick Mathes <jeanpatrick.mathes@gmx.de>